# knn-cpp

./: .gitignore  CMakeLists.txt  README.md
include/: Dataset.h  KNN.h  Node.h  Point.h  Visualizer.h
src/: KNN.cpp  dataset.cpp  main.cpp  node.cpp  point.cpp  visualizer.cpp
